--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,21 @@ set(m2_include_files
     ./include/m2/text/m2_textconvertor.h
     ./include/m2/text/m2_utf8.h
     ./include/m2/text/m2_wstring.h
+    ./include/m2/math/m2_area.h
+    ./include/m2/math/m2_bigdecimal.h
+    ./include/m2/math/m2_biginteger.h
+    ./include/m2/math/m2_length.h
+    ./include/m2/math/m2_math.h
+    ./include/m2/math/m2_random.h
+    ./include/m2/math/m2_uuid.h
+    ./include/m2/math/m2_vector.h
+    ./include/m2/math/m2_volume.h
+    ./include/m2/image/m2_color.h
+    ./include/m2/image/m2_image.h
+    ./include/m2/image/m2_margins.h
+    ./include/m2/image/m2_point.h
+    ./include/m2/image/m2_rect.h
+    ./include/m2/image/m2_size.h
     )
 
 set(m2_source_files 
