--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,6 +51,8 @@ set(m2_include_files
     ./include/m2/math/m2_vector.h
 
     ./include/m2/image/m2_color.h
+    ./include/m2/image/m2_colorramp.h
+    ./include/m2/image/m2_colorscheme.h
     ./include/m2/image/m2_image.h
     ./include/m2/image/m2_line.h
     ./include/m2/image/m2_margins.h
