1.add sqlite driver.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,6 +96,13 @@ set(m2_include_files
 
 set(m2_source_files 
     ./src/text/string.cpp
+
+    ./src/sql/m2_sqldatabase.cpp
+    ./src/sql/m2_sqldriver.cpp
+    ./src/sql/m2_sqldriver.h
+    ./src/sql/sqldrivers/sqlite/m2_sqlitedriver.cpp
+    ./src/sql/sqldrivers/sqlite/m2_sqlitedriver.h
+    ./src/sql/sqldrivers/sqlite/sqlite3.c
 )
 
 add_library(libm2 SHARED ${m2_include_files} ${m2_source_files})
